all in main.tex

--- a/main.tex
+++ b/main.tex
@@ -13,22 +13,22 @@
 \usepackage{newclude} % \include* to include without page break
 %\usepackage[colorlinks=false, pdfborder={0 0 0}]{hyperref}
 \usepackage{cleveref} % \cref instead of \ref, automatic "Section" etc.
+\usepackage{eurosym}
 
-\begin{document}
-
-\title{Testdoc}
+\title{Oscillations in the beta band predicting interval timing measured via reaction time}
+\shorttitle{Predicting reaction time with beta activity}
 \author{Max Hollmann}
 \affiliation{University of Groningen}
 \date{\today}
+\acknowledgements{Thanks to Hedderik van Rijn, Mark Span, and Jacob Jolij for their help.}
+
+\abstract{
+  Bla Abstract!!
+}
+
+\begin{document}
 \maketitle
-
-%\tableofcontents
-%\newpage
-
-\include*{sections/intro}
-\include*{sections/method}
-\include*{sections/results}
-\include*{sections/discussion}
+Intro bla bli.
 
 \bibliographystyle{apacite}
 % http://www.ctan.org/tex-archive/biblio/bibtex/contrib/apacite/apacite.pdf
