--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,12 @@
 % New explanation/mechanism from other research
 %
 
+% Hedderik in the method:
+% The Method section is pretty technical, which is perfectly fine.
+% However, this does mean that you will need to explain the rationale of
+% the setup of the experiment (i.e., waiting period, then cue and as
+% fast as possible reaction) in the introduction
+
 %%% Gambit: Time perception, timing, etc
 %%% Neural mechanism of timing?
 %%% CNA/CNV
@@ -62,18 +68,27 @@ Thus, a lot of scientific effort is spent on discovering its underlying mechanis
 One line of research in this area is looking at connections between electrophysiological measures from the brain and interval timing.
 For example, \citeA{macar_supplementary_1999} found a positive correlation between the amplitude of a negative cortical potential during a self-produced interval and the duration of the same interval.
 However, in a replication of this experiment \citeA{kononowicz_slow_2011} failed to find the same effect.
+% This idea, expressed in the work of Durstewitz (2003, 2004),
+% does not predict amplitude differences for short and long produc-
+% tions, and has found support in timing paradigms
+% Durstewitz, D. (2003). Self-organizing neural integrator predicts interval times through climbing activity. J. Neurosci. 23, 5342–5353.
+% Durstewitz, D. (2004). Neural representation of interval time. Neuroreport 15, 745–749.
 
 % Beta -> interval length
 % tapping -> off/onset same -> no predictability
-%
+
 More recently, a different measure was found to be predictive of the length of produced intervals.
-\citeA{bartolo_information_2014} used the power of neuronal oscillations in the beta band to predict the interval length in a synchronization-continuation tapping task.
-In this experiment, participants first tapped along with an externally provided beat (synchronization), and then continued tapping at the same speed without external guidance (continuation).
+\citeA{bartolo_information_2014} used the power of neuronal oscillations in the beta band to predict the interval length in a synchronization-continuation tapping task performed on monkeys.
+In this experiment, subjects first tapped along with an externally provided beat (synchronization), and then continued tapping at the same speed without external guidance (continuation).
 During the continuation part, longer intervals were associated with higher beta power during the interval, and vice versa.
 This makes sense in the light of previous findings that linked beta power to motor inhibition \cite{joundi_driving_2012}.
 
+\citeA{kononowicz_beta_2014} extended these findings to an interval production task, in which participants were instructed to estimate time intervals of 2.5 seconds by pressing a key twice.
+In this study, intervals were distinct from each other, allowing a clear association between the beta power during the interval and the length of the interval itself.
+As in \citeauthor{bartolo_information_2014}'s study, beta power was postitively correlated with the length of the produced intervals.
+
 % Interval timing -> reaction time
-A large body of research exists that links interval timing to reaction time tasks \cite<e.g.,>{karlin_reaction_1959, drazin_effects_1961, grosjean_timing_2001}.
+In another area of the field of timing, a large body of research exists that links interval timing to reaction time tasks \cite<e.g.,>{karlin_reaction_1959, drazin_effects_1961, grosjean_timing_2001}.
 When participants come to expect the trigger stimulus after a specific time interval, deviations from this interval lead to predictable changes in reaction time.
 For example, \citeA{grosjean_timing_2001} found that when the stimulus appears earlier than expected, reaction times will be slower.
 Conversely, when it appears later than expected, reaction times will be faster.
@@ -83,8 +98,6 @@ However, when it appears later than anticipated, the readiness is very high and 
 
 % This study
 The purpose of the present study is to investigate the link between beta power, interval timing, and reaction time.
-
-\cite{kononowicz_beta_2014}.
 
 \section{Method}
 \section{Results}
